--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <!-- div with id of temp -->
       <div id="temp" class="animated fadeInDown slower">
         <h1 class="temp__result">
-          <img id="temp__icon" src="http://openweathermap.org/img/w/04d.png"><span id="temp__value">27</span>&#8451
+          <img id="temp__icon" src=""><span id="temp__value">27</span>&#8451
         </h1>
         <h3 class="greeting">
           <span id="time">Good Morning</span>, <span id="userName">Shox</span>
