feat: optimises file sizes

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="UTF-8">
   <title>Weather Journal</title>
-  <link href="https://fonts.googleapis.com/css?family=Oswald:400,600,700|Ranga:400,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/all.css">
   <link rel="stylesheet" href="css/large.css">
   <link rel="stylesheet" href="css/animate.css">
@@ -29,7 +28,7 @@
       </nav>
       <div class="seasons">
         <div class="image--wrapper animated fadeInLeft">
-          <img class="seasons__image" src="images/seasons.svg" alt="">
+          <img class="seasons__image" src="images/seasons.png" alt="collage of different seasons">
         </div>
 
         <div class="hero__text">
