feat: optimises file sizes

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <!-- div with id of temp -->
       <div id="temp" class="animated fadeInDown slower">
         <h1 class="temp__result">
-          <img id="temp__icon" src=""><span id="temp__value">27</span>&#8451
+          <img id="temp__icon" src="" alt="icon indicating current weather"><span id="temp__value">27</span>&#8451
         </h1>
         <h3 class="greeting">
           <span id="time">Good Morning</span>, <span id="userName">Shox</span>
