feat: adds new icon set for weather conditions depending on time of day

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </div>
     </header>
 
-    <section id="entryHolder" class="">
+    <section id="entryHolder" class="hidden">
       <!-- div with id of date -->
       <div class="animated fadeIn slower delay-3s" id="date">20th of Febraury, 2020</div>
 
